--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ba8c8">  <td>24/08/08 21:26:23</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;test1.setup()[pri:0, instance:test.test1@223191a6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="8ba8c8">  <td>24/08/08 21:26:30</td>   <td>7400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test1.testlogin()[pri:0, instance:test.test1@223191a6]">testlogin</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="8ba8c8">  <td>24/08/08 21:26:26</td>   <td>3698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;test1.url()[pri:0, instance:test.test1@223191a6]">&gt;&gt;url</td> 
-<td>&nbsp;</td>  <td>main@1521083627</td>   <td></td> </tr>
+<tr bgcolor="7479c6">  <td>24/08/31 14:44:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Examtest1.close()[pri:0, instance:Examtest.Examtest1@799f10e1]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="7479c6">  <td>24/08/31 14:44:35</td>   <td>-13166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Examtest1.page()[pri:0, instance:Examtest.Examtest1@799f10e1]">page</td> 
+  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="7479c6">  <td>24/08/31 14:44:31</td>   <td>-17892</td> <td>&nbsp;</td><td title="&gt;&gt;Examtest1.setup()[pri:0, instance:Examtest.Examtest1@799f10e1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="7479c6">  <td>24/08/31 14:44:35</td>   <td>-13365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Examtest1.urlOpen()[pri:0, instance:Examtest.Examtest1@799f10e1]">&gt;&gt;urlOpen</td> 
+<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
 </table>
